--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,15 +1,17 @@
-<h1>NewPosts</h1>
-
-<%= form_for :posts, url: posts_path do |f| %>
-   <p>
-      <%= f.label :title %><br>
-      <%= f.text_field :title %>
-   </p>
-   <p>
-      <%= f.label :body %><br>
-      <%= f.text_area :body %>
-   </p>
-   <p>
-      <%= f.submit %>
-   </p>
-<% end %>
+<div id="page_wrapper">
+   <h1>New Post</h1>
+   
+   <%= form_for :posts, url: posts_path do |f| %>
+      <p>
+         <%= f.label :title %><br>
+         <%= f.text_field :title %>
+      </p>
+      <p>
+         <%= f.label :body %><br>
+         <%= f.text_area :body %>
+      </p>
+      <p>
+         <%= f.submit %>
+      </p>
+   <% end %>
+</div>
