--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,8 +26,10 @@
       <li><a href ="#">Github</a></li>
       <li><a href ="#">E-Mail</a></li>
     </ul>
+    <% if !user_signed_in? %>
+			<p class="sign_in"><%= link_to "Admin Login", new_user_session_path %></p>
+		<% end %>
     
-    <p class="sign_in">Admin Login</p>
   </div>
   <div id="main_content">
     <div id="header">
@@ -38,11 +40,13 @@
 			<% else %>
 				<%= link_to "Back to All Posts", root_path %>
 			<% end %>
-      
-      <div class="buttons">
-				<button class="button"><%= link_to "New Post", new_post_path %></button>
-				<button class="button">Log Out</button>
-			</div>
+			
+      <% if user_signed_in? %>
+        <div class="buttons">
+  				<button class="button"><%= link_to "New Post", new_post_path %></button>
+  				<button class="button">Log Out</button>
+  			</div>
+  		<% end %>
     </div>
     <% flash.each do |name, msg| %>
 			<%= content_tag(:div, msg, class: "alert") %>
