--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
       <% if user_signed_in? %>
         <div class="buttons">
   				<button class="button"><%= link_to "New Post", new_post_path %></button>
-  				<button class="button">Log Out</button>
+  				<button class="button"><%= link_to "Log out", destroy_user_session_path, method: :delete %></button>
   			</div>
   		<% end %>
     </div>
