--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
     </ul>
     <ul>
       <li class="category">Social</li>
-      <li><a href ="#">Facebook</a></li>
+      <li><a href ="http://facebook.com">Facebook</a></li>
       <li><a href ="#">Twitter</a></li>
       <li><a href ="#">Github</a></li>
       <li><a href ="#">E-Mail</a></li>
